--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-scripts": "5.0.1",
     "react-toggle": "^4.1.3",
     "sass": "^1.56.1",
